--- a/style.css
+++ b/style.css
@@ -1,74 +1,80 @@
- body {
-   font-family: cursive, sans-serif;
-   background-color: #b4dfec;
-   color: #fff; 
- }
-    
- h1{
-   text-align: center;
-   font-family: cursive, sans-serif;
-   margin-top: 50px;
- }
- h2{
-  text-align: center;
-  font-family: cursive, sans-serif;
-  margin-top: 50px;
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,800');
+
+body{
+    font-family: 'Montserrat', sans-serif;
 }
 
-#reiniciar-btn {
-  display: block;
-   margin: 0 auto;
-   padding: 10px 20px;
-   font-size: 18px;
-   background-color: #0CBABA;
-   color: #fff;
-   border: none;
-   border-radius: 3px;
-}
-
- #guess-input {
-   display: block;
-   margin: 0 auto 20px;
-   padding: 10px;
-   font-size: 18px;
-   width: 250px;
-   border: 1px solid #ccc;
- }
-    
- #guess-button {
-   display: block;
-   margin: 0 auto;
-   padding: 10px 20px;
-   font-size: 18px;
-   background-color: #0c26ba;
-   color: #fff;
-   border: none;
-   border-radius: 3px;
-   font-family: cursive, sans-serif;
- }
-    
- button:active {
- 	transform: scale(0.95);
- }
- button:disabled{
-  background-color: #0cba46;
+#contenedor{
+    width: 900px;
+    height: 500px;
+    text-align: center;
+    position: absolute;
+    inset: 0;
+    margin: auto;
+    border-radius: 10px;
+    overflow: hidden; 
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 
+      0 10px 10px rgba(0,0,0,0.22);
   }
-    
- .letter {
-     border: 1px solid black;
-     padding: 3px;
-     margin: 3px;
-     min-width: 20px;
-     text-align: center;
-     display: inline-block
- }
-    
- .row{
-     margin-bottom: 10px;
- }
- .centrado {
-  text-align: center;
- }    
- .input-area{
-     margin: 30px;
- }
+  
+
+#calculadora{
+    background: white;
+    width: 50%;
+    height: 100%;
+    float: left;
+}
+
+#detalle{
+    background: #396b29;
+    width: 50%;
+    height: 100%;
+    float: left;
+    color: #f6f5f7;
+}
+
+.contenido{
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+    overflow: hidden;
+    padding: 40px;
+}
+
+input {
+	width: 70%;
+    padding: 12px 15px;
+    border: none;
+    background-color: #eee;
+}
+
+button {
+  font-size: 15px;
+	font-weight: bold;
+	padding: 12px 45px;
+	border-radius: 30px;
+	background-color: #190491;
+	border: 1px solid #190491;
+	color: #FFFFFF;
+	text-transform: uppercase;
+	letter-spacing: 1px;
+	transition: transform 20ms ease-in;
+}
+
+button:active {
+	transform: scale(0.95);
+}
+
+#error{
+    color: red;
+    font-weight: bold;
+    display: none;
+}
+
+.resultado{
+    color: #0A81D1;
+    font-weight: bold;
+    font-size: 25px;
+    margin-bottom: 5px;
+    display: none;
+}
